Fix padding on .content
I tested using the "vw" unit but it messed up the padding on mobile.
So, I reverted it back to % and adjusted the value accordingly.

--- a/rsrc/styles.css
+++ b/rsrc/styles.css
@@ -108,7 +108,7 @@ h1 {
     margin: 10px auto 30px;
 }
 .content {
-    padding: 3% 15vw;
+    padding: 3% 15%;
     line-height: 90%;
 }
 p {
